--- a/projects/rilke-ui/src/lib/components/input/input.component.scss
+++ b/projects/rilke-ui/src/lib/components/input/input.component.scss
@@ -3,7 +3,7 @@
 :host {
 	border-radius: $r-md;
 	color: $main-contrast-800;
-	display: block;
+	display: flex;
 	font-size: $f-size-md;
 	line-height: $f-line-md;
 	outline: none;
