--- a/projects/rilke-ui/src/lib/components/list/list.component.html
+++ b/projects/rilke-ui/src/lib/components/list/list.component.html
@@ -45,11 +45,12 @@
 		</div>
 	</div>
 </div>
+-->
 
-<ka-pagination
+<ril-pagination
 	*ngIf="pagesCount > 1"
 	[pageRouter]="pageRouter"
 	[pagesNumber]="pagesCount"
 	[pageNum]="page"
 	(pageChange)="pageListener($event)"
-></ka-pagination> -->
+></ril-pagination>
