--- a/projects/rilke-ui/src/lib/components/checkbox/checkbox.component.scss
+++ b/projects/rilke-ui/src/lib/components/checkbox/checkbox.component.scss
@@ -30,12 +30,14 @@
 				cursor: inherit;
 				opacity: 0;
 				position: absolute;
+				user-select: none;
 			}
 			.check-detector {
 				display: block;
 				font-size: 1.6rem;
 				transform: scale(0);
 				transition: transform 0.2s ease-in-out;
+				user-select: none;
 			}
 		}
 		.ril-checkbox-label {
