--- a/projects/rilke-ui/src/lib/components/list/list-item/list-item.component.html
+++ b/projects/rilke-ui/src/lib/components/list/list-item/list-item.component.html
@@ -1,4 +1,4 @@
-<div class="list-row" (click)="toggleDetails()">
+<div class="list-row">
 	<div (click)="$event.stopPropagation()" *ngIf="checkbox" class="list-check">
 		<ril-checkbox [formControl]="listCheck" [value]="listCheck.value">
 		</ril-checkbox>
@@ -6,10 +6,4 @@
 	<div [ngClass]="{ 'pl-4': !checkbox }" class="columns">
 		<ng-content select="[column]"></ng-content>
 	</div>
-	<div *ngIf="itemOption" class="list-option">
-		<ng-content select="[option]"></ng-content>
-	</div>
 </div>
-<ril-list-item-detail>
-	<ng-content select="[detail]"></ng-content>
-</ril-list-item-detail>
