--- a/projects/rilke-ui/src/lib/components/avatar/avatar.component.scss
+++ b/projects/rilke-ui/src/lib/components/avatar/avatar.component.scss
@@ -1,7 +1,4 @@
-@import "../../../scss/vars";
-@import "../../../scss/colors";
-
-:host {
+ril-avatar {
 	align-items: center;
 	background: $grey-400;
 	border-radius: 50%;
