--- a/projects/rilke-ui/src/lib/components/badge/badge.component.scss
+++ b/projects/rilke-ui/src/lib/components/badge/badge.component.scss
@@ -1,7 +1,5 @@
 @use "sass:math";
-@import "../../../scss/vars";
-
-:host {
+ril-badge {
 	align-items: center;
 	justify-content: center;
 	border-radius: $r-md;
