--- a/projects/rilke-ui/src/lib/components/button/button.component.scss
+++ b/projects/rilke-ui/src/lib/components/button/button.component.scss
@@ -1,7 +1,5 @@
 @use "sass:math";
-@import "../../../scss/vars";
-
-:host {
+[ril-button] {
 	align-items: center;
 	border: transparent 0 solid;
 	cursor: pointer;
