--- a/projects/rilke-ui/src/lib/components/card/card-title/card-title.component.scss
+++ b/projects/rilke-ui/src/lib/components/card/card-title/card-title.component.scss
@@ -1,6 +1,4 @@
-@import "../../../../scss/vars";
-
-:host {
+ril-card-title {
 	font-size: $f-size-lg;
 	color: $main-contrast-800;
 	margin-bottom: $m-md;
