--- a/projects/rilke-ui/src/lib/components/expansion-panel/expansion-panel.component.scss
+++ b/projects/rilke-ui/src/lib/components/expansion-panel/expansion-panel.component.scss
@@ -1,6 +1,4 @@
-@import "../../../scss/vars";
-
-:host {
+ril-expansion-panel {
 	.mat-expansion-panel {
 		background: $main-800;
 		box-shadow: $s-md;
