--- a/projects/rilke-ui/src/lib/components/select/select-option/select-option.component.scss
+++ b/projects/rilke-ui/src/lib/components/select/select-option/select-option.component.scss
@@ -1,6 +1,4 @@
-@import "../../../../scss/vars";
-
-:host {
+ril-select-option {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
