--- a/projects/rilke-ui/src/lib/components/checkbox/checkbox.component.scss
+++ b/projects/rilke-ui/src/lib/components/checkbox/checkbox.component.scss
@@ -1,7 +1,5 @@
 @use "sass:math";
-@import "../../../scss/vars";
-
-:host {
+ril-checkbox {
 	display: inline-flex;
 	line-height: 1;
 	transition: color 0.2s ease-in-out;
