--- a/projects/rilke-ui/src/lib/components/datepicker/datepicker.component.scss
+++ b/projects/rilke-ui/src/lib/components/datepicker/datepicker.component.scss
@@ -1,5 +1,3 @@
-@import "../../../scss/vars";
-
 $_module-rem: $base-size;
 $_placeholder-color: #a8a8a8;
 $_fs: 1rem;
@@ -32,7 +30,7 @@ input:-webkit-autofill {
 	-webkit-animation-fill-mode: both;
 }
 
-:host {
+ril-date-picker {
 	display: block;
 	outline: none;
 	width: 100%;
