--- a/projects/rilke-ui/src/lib/components/list/list-header/list-header.component.scss
+++ b/projects/rilke-ui/src/lib/components/list/list-header/list-header.component.scss
@@ -1,6 +1,4 @@
-@import "../../../../scss/vars";
-
-:host {
+ril-list-header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
