--- a/projects/rilke-ui/src/lib/components/radio/radio-option/radio-option.component.scss
+++ b/projects/rilke-ui/src/lib/components/radio/radio-option/radio-option.component.scss
@@ -1,6 +1,4 @@
-@import "../../../../scss/vars";
-
-:host {
+ril-radio-option {
 	display: inline-flex;
 	line-height: 1;
 	transition: color 0.2s ease-in-out;
