--- a/projects/rilke-ui/src/lib/components/button/button.component.scss
+++ b/projects/rilke-ui/src/lib/components/button/button.component.scss
@@ -54,7 +54,7 @@
 		border-top: 2px solid rgba(255, 255, 255, 20%);
 		border-right: 2px solid rgba(255, 255, 255, 20%);
 		border-bottom: 2px solid rgba(255, 255, 255, 20%);
-		border-left: 2px solid #fff;
+		border-left: 2px solid #FFF;
 		transform: translateZ(0);
 		transform: translateZ(0);
 		transform: translateZ(0);
@@ -114,6 +114,7 @@
 			height: $f-size-xs;
 		}
 	}
+
 	&.btn-sm {
 		font-size: $f-size-sm;
 		line-height: $f-size-sm;
@@ -131,6 +132,7 @@
 			height: $f-size-sm;
 		}
 	}
+
 	&.btn-md {
 		font-size: $f-size-md;
 		line-height: $f-size-md;
@@ -140,6 +142,7 @@
 		.btn-text {
 			min-height: $f-size-md;
 		}
+
 		.btn-loader,
 		.btn-loader::after {
 			border-radius: 50%;
@@ -147,6 +150,7 @@
 			height: $f-size-md;
 		}
 	}
+
 	&.btn-lg {
 		font-size: $f-size-lg;
 		line-height: $f-size-lg;
@@ -156,6 +160,7 @@
 		.btn-text {
 			min-height: $f-size-lg;
 		}
+
 		.btn-loader,
 		.btn-loader::after {
 			border-radius: 50%;
@@ -163,6 +168,7 @@
 			height: $f-size-lg;
 		}
 	}
+
 	&.btn-xl {
 		font-size: $f-size-xl;
 		line-height: $f-size-xl;
@@ -196,6 +202,7 @@
 			}
 		}
 	}
+
 	&.btn-success {
 		background: $success-color;
 		color: $success-text;
@@ -210,6 +217,7 @@
 			}
 		}
 	}
+
 	&.btn-info {
 		background: $info-color;
 		color: $info-text;
@@ -224,6 +232,7 @@
 			}
 		}
 	}
+
 	&.btn-warning {
 		background: $warning-color;
 		color: $warning-text;
@@ -238,6 +247,7 @@
 			}
 		}
 	}
+
 	&.btn-error {
 		background: $error-color;
 		color: $error-text;
@@ -252,6 +262,7 @@
 			}
 		}
 	}
+
 	&.btn-light {
 		background: $light-color;
 		color: $light-text;
@@ -266,6 +277,7 @@
 			}
 		}
 	}
+
 	&.btn-dark {
 		background: $dark-color;
 		color: $dark-text;
