--- a/projects/rilke-ui/src/lib/components/color-picker/color-picker.component.scss
+++ b/projects/rilke-ui/src/lib/components/color-picker/color-picker.component.scss
@@ -1,5 +1,6 @@
 ril-color-picker {
 	position: relative;
+
 	.wrapper {
 		display: flex;
 		align-items: center;
@@ -10,7 +11,7 @@ ril-color-picker {
 			width: 1.6rem;
 			height: 1.6rem;
 			border-radius: 4px;
-			background-color: #eaeaea;
+			background-color: #EAEAEA;
 			border: 1px solid $main-contrast-800;
 		}
 
