--- a/projects/rilke-ui/src/lib/components/menu/item/item.component.scss
+++ b/projects/rilke-ui/src/lib/components/menu/item/item.component.scss
@@ -2,7 +2,7 @@
 ril-menu-item {
 	hr {
 		border: none;
-		border-top: 1px solid rgba(31, 32, 34, 0.1);
+		border-top: 1px solid rgba(31, 32, 34, 10%);
 	}
 
 	&:first-child {
