--- a/projects/rilke-ui/src/lib/components/menu/menu.component.scss
+++ b/projects/rilke-ui/src/lib/components/menu/menu.component.scss
@@ -2,7 +2,7 @@ ril-menu {
 	position: relative;
 
 	span {
-		opacity: 0;
+		opacity: 0%;
 		visibility: hidden;
 		position: absolute;
 		pointer-events: none;
