--- a/projects/rilke-ui/src/lib/components/radio/radio-option/radio-option.component.scss
+++ b/projects/rilke-ui/src/lib/components/radio/radio-option/radio-option.component.scss
@@ -10,12 +10,14 @@ ril-radio-option {
 
 		.radio-input {
 			cursor: pointer;
-			opacity: 0;
+			opacity: 0%;
 			position: absolute;
 		}
+
 		.ril-radio-handle {
 			align-items: center;
 			background: $main-800;
+
 			//border: 1px solid red;
 			border-radius: 50%;
 			cursor: inherit;
@@ -34,11 +36,13 @@ ril-radio-option {
 				height: 100%;
 				padding: 0;
 				transform: scale(0);
-				transition: background 0.2s ease-in-out,
+				transition:
+					background 0.2s ease-in-out,
 					transform 0.2s ease-in-out;
 				width: 100%;
 			}
 		}
+
 		.ril-radio-label {
 			color: $main-contrast-800;
 			margin-left: 10px;
@@ -48,20 +52,23 @@ ril-radio-option {
 				display: none;
 			}
 		}
+
 		&:hover {
 			.ril-radio-handle {
 				background: $main-700;
+
 				.check-detector {
 					background: $main-contrast-700;
-
 					transform: scale(0.5);
 				}
 			}
+
 			.ril-radio-label {
 				color: $main-contrast-700;
 			}
 		}
 	}
+
 	&.checked {
 		.ril-radio-wrap {
 			.ril-radio-handle {
@@ -72,11 +79,13 @@ ril-radio-option {
 					transform: scale(0.5);
 				}
 			}
+
 			.ril-radio-label {
 				color: $main-contrast-700;
 			}
 		}
 	}
+
 	&.disabled {
 		.ril-radio-wrap {
 			cursor: not-allowed;
@@ -89,10 +98,12 @@ ril-radio-option {
 					transform: scale(0);
 				}
 			}
+
 			.ril-radio-label {
 				color: $main-500;
 			}
 		}
+
 		&.checked {
 			.ril-radio-wrap {
 				.ril-radio-handle {
