--- a/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
+++ b/projects/rilke-ui/src/lib/components/text-area/text-area.component.scss
@@ -28,14 +28,18 @@ ril-text-area {
 			margin: 0;
 			outline: none;
 			padding: $p-md $p-md;
-			transition: background 0.2s ease-in-out, border 0.2s ease-in-out,
-				box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+			transition:
+				background 0.2s ease-in-out,
+				border 0.2s ease-in-out,
+				box-shadow 0.2s ease-in-out,
+				color 0.2s ease-in-out;
 			width: 100%;
 
 			// @include placeholder {
 			// 	color: $main-500;
 			// }
 		}
+
 		.char-limiter {
 			color: $main-500;
 			display: flex;
@@ -50,6 +54,7 @@ ril-text-area {
 			}
 		}
 	}
+
 	&:hover {
 		color: $main-contrast-500;
 
@@ -61,6 +66,7 @@ ril-text-area {
 			}
 		}
 	}
+
 	&.textarea-focus {
 		color: $main-contrast-800;
 
@@ -72,6 +78,7 @@ ril-text-area {
 			}
 		}
 	}
+
 	&.ng-invalid.ng-touched,
 	.has-error & {
 		.ril-textarea-wrap {
@@ -81,6 +88,7 @@ ril-text-area {
 			}
 		}
 	}
+
 	&.textarea-disabled,
 	&.textarea-readonly {
 		color: $main-contrast-700;
@@ -96,6 +104,7 @@ ril-text-area {
 			}
 		}
 	}
+
 	&.textarea-not-resize {
 		.ril-textarea-wrap {
 			.textarea-control {
