--- a/projects/rilke-ui/src/scss/_typography.scss
+++ b/projects/rilke-ui/src/scss/_typography.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 
-$f-family: Roboto, "Helvetica Neue", sans-serif;
+$f-family: 'Roboto', "Helvetica Neue", sans-serif;
 $base-size: 1rem;
 $base-weight: 400;
 
