--- a/projects/rilke-ui/src/lib/components/progress-spinner/progress-spinner.component.scss
+++ b/projects/rilke-ui/src/lib/components/progress-spinner/progress-spinner.component.scss
@@ -10,7 +10,7 @@ ril-progress-spinner {
 		stroke: $main-800;
 	}
 
-	::ng-deep .mat-progress-spinner circle,
+	.mat-progress-spinner circle,
 	.mat-spinner circle {
 		stroke: inherit;
 	}
